deploy/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tdengine-admin
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
